# chip-8

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: analysis.yml  cmake.yml  codeql.yml  main.yml
include/: cpu.h  defines.h
include/audio/: beep.h  notes.h
include/programs/: 1-chip8-logo.h  2-ibm-logo.h
include/video/: screen.h
src/: cpu.c  main.c
src/audio/: beep.c  notes.c
src/programs/: 1-chip8-logo.c  2-ibm-logo.c
src/video/: screen.c
src/wasm-shell/: pre.js  shell.html
